--- a/index.html
+++ b/index.html
@@ -2,70 +2,114 @@
 <html ng-app='myAPP'>
 
 <head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
-  <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link rel="stylesheet"
+          href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
-<body>
-  <div ng-controller='MainCtrl' class="emoviz-selfreported-styles">
-    <div layout="row">
-      <div flex>
-        dflkdgjs
+<body ng-controller='MainCtrl'>
+<md-toolbar>
+    <div class="md-toolbar-tools">
+        <h2>Emoviz </h2>
+    </div>
+</md-toolbar>
+
+<header>Filters:</header>
+<div id="filterContainer">
+    <div class="element">
         <md-input-container>
-          <label>Session :</label>
-          <md-select ng-model="selectedSpSessions" md-on-close="" multiple>
-            <md-optgroup label="spSessions">
-              <md-option ng-value="session" ng-repeat="session in spSessions">{{session}}</md-option>
-            </md-optgroup>
-          </md-select>
+            <label>Session:</label>
+            <!-- multiple -->
+            <md-select ng-model="selectedSpSessions" md-on-close="">
+                <md-optgroup label="spSessions">
+                    <md-option ng-value="session" ng-repeat="session in spSessions">{{session}}</md-option>
+                </md-optgroup>
+            </md-select>
         </md-input-container>
-      </div>
-      
-      <div flex>
-        <md-button class="md-raised md-primary" ng-click="applyFilter()">Filtre</md-button>
-      </div>
-
-
     </div>
 
-    <div layout="row">
-      <div flex>
+    <div class="element">
+        <md-switch ng-model="startEndSwitcher" aria-label="Switch 2" ng-true-value="'START'" ng-false-value="'END'">
+            Check point: {{ startEndSwitcher }}
+        </md-switch>
+    </div>
+
+    <div class="element">
+        <md-button class="md-raised md-primary" ng-click="applyFilter()">
+            Filtre
+        </md-button>
+    </div>
+</div>
+
+<header>Self Reported:</header>
+<div id="selfReportedContainer" class="emoviz-selfreported-styles">
+
+    <div class="element">
         MoodMap
-
         <div id="mood-map-chart">
-          <mood-map-chart mood-points="moodPoints" data="mood" change-handler="onMoodChange"></mood-map-chart>
+            <mood-map-chart mood-points="moodPoints" check-point='startEndSwitcher' data="mood"
+                            change-handler="onMoodChange"></mood-map-chart>
         </div>
-
-      </div>
-      <div flex>
-        Discrète
-
-        <discrete-emotions data="selfReportedEmotionsDialog.discrete_emotions" ng-disabled="selfReportedEmotionsDialog.bProcessing"></discrete-emotions>
-      </div>
-      <div flex>
-        Projection
-      </div>
     </div>
-  </div>
+
+    <div class="element">
+        Discrète
+        <discrete-emotions data="discrete_emotions" ng-disabled="true">
+        </discrete-emotions>
+    </div>
+
+    <div class="element">
+        Projection
+        <div id="mood-map-chart">
+            <mood-map-chart mood-points="projectedDiscreteEmotions" data="mood" check-point='startEndSwitcher'
+                            change-handler="onMoodChange"></mood-map-chart>
+        </div>
+    </div>
+
+</div>
+
+<header>Audio:</header>
+<div id="audioContainer">
+    <table class="table table-responsive" id="finishtable">
+        <thead>
+        <tr>
+            <th>From</th>
+            <th>To</th>
+            <th>Duration</th>
+            <th>Temper</th>
+            <th>Valence</th>
+            <th>Arousal</th>
+            <!--<th>Group11</th>
+            <th>Composite</th>-->
+        </tr>
+        </thead>
+        <tbody ng-show="bShowTtable"></tbody>
+    </table>
+</div>
+
+<header>Video:</header>
 
 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+<script data-require="angular.js@1.4.8" data-semver="1.4.8" src="https://code.angularjs.org/1.4.8/angular.js"></script>
+<script data-semver="1.4.8" src="https://code.angularjs.org/1.4.8/angular-resource.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
 
-  <script data-require="angular.js@1.4.8" data-semver="1.4.8" src="https://code.angularjs.org/1.4.8/angular.js"></script>
-  <script data-semver="1.4.8" src="https://code.angularjs.org/1.4.8/angular-resource.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+<!-- Angular Material Library -->
+<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.0/angular-material-icons.min.js"></script>
 
-  <!-- Angular Material Library -->
-  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.0/angular-material-icons.min.js"></script>
+<script data-require="d3js@*" data-semver="3.5.14" src="http://d3js.org/d3.v3.min.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/async/1.5.2/async.min.js"></script>
 
-  <script data-require="d3js@*" data-semver="3.5.14" src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/async/1.5.2/async.min.js"></script>
-  <script src="script.js"></script>
+<script src="filters.client.js"></script>
+<script src="controllers.client.js"></script>
+<script src="script.js"></script>
 
 </body>
 
