adding mapping by segment

--- a/emoviz-discrete-emotions.client.view.html
+++ b/emoviz-discrete-emotions.client.view.html
@@ -6,7 +6,7 @@
         </md-tooltip>
 
         <div flex="10">
-            <md-button class="md-icon-button md-body-1">
+            <md-button aria-label=".." class="md-icon-button md-body-1">
                 <ng-md-icon icon="{{ emotion.emotion_icon }}" style="fill: #abcdef;" size="32"></ng-md-icon>
             </md-button>
         </div>
